src/objects/SSO_Email_Out__c.object
<CustomObject>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_10__c</fullName>
        <label>Attribute 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Attribute 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Attribute 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_URL__c</fullName>
        <label>Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Password__c</fullName>
        <label>Temporary Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Password Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP Welcome Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers Welcome Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Registration Welcome Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Welcome Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generate Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP Welcome Kit For Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Registration Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Kit For Migration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SSO Email Out</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Type__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Attribute_1__c</columns>
        <columns>Attribute_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EO-{00000}</displayFormat>
        <label>SSO Email Out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSO Email Out</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>